--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a href="elutsykkel/xp.html" class="list-group-item list-group-item-action">(XP) Extreme Programming</a>
             <a href="casevahendid/main.html" class="list-group-item list-group-item-action">CASE vahendid</a>
             <a href="bitcoin/bitcoin.html" class="list-group-item list-group-item-action">Bitcoin kalkulaator</a>
+            <a href="UML Diagrams/UML_index.html" class="list-group-item list-group-item-action">UML</a>
          </ul>
 
          <!--         
