Update navbar and styles

--- a/navbar.html
+++ b/navbar.html
@@ -29,6 +29,7 @@
                    <li><a class="dropdown-item" href="../elutsykkel/xp.html">XP</a></li>
                    <li><a class="dropdown-item" href="../casevahendid/main.html">CASE vahendid</a></li>
                    <li><a class="dropdown-item" href="../bitcoin/bitcoin.html">Bitcoin Calculator</a></li>
+                   <li><a class="dropdown-item" href="../UML Diagrams/UML_index.html"">UML</a></li>
                  </ul>
                </li>
              
