--- a/UML Diagrams/UML_index.html
+++ b/UML Diagrams/UML_index.html
@@ -17,7 +17,7 @@
             <a href="ERD.html">ERD</a>
         </div>
         <div>
-            <a href="Flowchart.html">Flowchart</a>
+            <a href="flowchart.html">Flowchart</a>
         </div>
 
     
