index.html and navbar.html update

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="casevahendid/main.html" class="list-group-item list-group-item-action">CASE vahendid</a>
             <a href="bitcoin/bitcoin.html" class="list-group-item list-group-item-action">Bitcoin kalkulaator</a>
             <a href="UML Diagrams/UML_index.html" class="list-group-item list-group-item-action">UML</a>
+            <a href="winforms/winforms.html" class="list-group-item list-group-item-action">Andmebaasi rakenduse loomine</a>
          </ul>
 
          <!--         
