--- a/navbar.html
+++ b/navbar.html
@@ -29,7 +29,8 @@
                    <li><a class="dropdown-item" href="../elutsykkel/xp.html">XP</a></li>
                    <li><a class="dropdown-item" href="../casevahendid/main.html">CASE vahendid</a></li>
                    <li><a class="dropdown-item" href="../bitcoin/bitcoin.html">Bitcoin Calculator</a></li>
-                   <li><a class="dropdown-item" href="../UML Diagrams/UML_index.html"">UML</a></li>
+                   <li><a class="dropdown-item" href="../UML Diagrams/UML_index.html">UML</a></li>
+                   <li><a class="dropdown-item" href="../winforms/winforms.html">Andmebaasi rakenduse loomine</a></li>
                  </ul>
                </li>
              
