--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                      <a href="bitcoin/bitcoin.html" class="list-group-item list-group-item-action">Bitcoin kalkulaator</a>
                      <a href="UML Diagrams/UML_index.html" class="list-group-item list-group-item-action">UML</a>
                      <a href="winforms/winforms.html" class="list-group-item list-group-item-action">Andmebaasi rakenduse loomine</a>
+                     <a href="projectLibre/libre_index.html" class="list-group-item list-group-item-action">ProjectLibre</a>
                   </ul>
               </div>
               <div class="row">
