--- a/navbar.html
+++ b/navbar.html
@@ -31,6 +31,7 @@
                    <li><a class="dropdown-item" href="../bitcoin/bitcoin.html">Bitcoin Calculator</a></li>
                    <li><a class="dropdown-item" href="../UML Diagrams/UML_index.html">UML</a></li>
                    <li><a class="dropdown-item" href="../winforms/winforms.html">Andmebaasi rakenduse loomine</a></li>
+                   <li><a class="dropdown-item" href="../projectLibre/libre_index.html">ProjectLibre</a></li>
                  </ul>
                </li>
              
