--- a/elutsykkel/agile.html
+++ b/elutsykkel/agile.html
@@ -13,6 +13,10 @@
         <div id="navbar"  class="sticky-top"></div>
         <script src="../scripts/navbar.js"></script>
 
+        <div class="d-flex justify-content-center" style="padding: 3rem;">
+            <a href="../elutsykkel_agile/agile_elu_index.html" type="button" class="btn btn-outline-secondary">Loe rohkem siit</a>
+        </div>
+
         <h1>Agile arendusmudel</h1>
 
         <p>
