--- a/UML Diagrams/UML_index.html
+++ b/UML Diagrams/UML_index.html
@@ -13,14 +13,16 @@
         <div id="navbar"  class="sticky-top"></div>
         <script src="../scripts/navbar.js"></script>
 
-        <div>
-            <a href="ERD.html">ERD</a>
+        <div class="row row-cols-1 row-cols-md-2 p-3 text-center">
+            <div>
+                <a href="ERD.html" type="button" class="btn btn-outline-secondary">Entity Relationship Diagram (ERD)</a>
+            </div>
+            <div>
+                <a href="flowchart.html" type="button" class="btn btn-outline-secondary">Flowchart Diagram</a>
+            </div>
         </div>
-        <div>
-            <a href="flowchart.html">Flowchart</a>
-        </div>
+        
 
-    
         <h1>Misasi üleüldse on Unified Modeling Language (UML)?</h1>
         <p>
             <b>UML (Unified Modeling Language)</b> on standardiseeritud modelleerimiskeel, mis koosneb graafilistest diagrammidest ja aitab arendajatel tarkvarasüsteemide artefakte kirjeldada, visualiseerida, luua ja dokumenteerida. Lisaks kasutatakse UML-i ka äriprotsesside ja muude süsteemide modelleerimiseks. See ühendab parimad inseneripraktikad, mis on tõestanud oma kasulikkust keerukate süsteemide modelleerimisel. UML mängib olulist rolli <b>objektorienteeritud tarkvara arenduses</b>, sest pakub võimalust projekteerida ja valideerida arhitektuuri.
